# esm-data-automation

./: .env.example  .gitignore  CHANGELOG_SUMMARY.txt  MASTER_PLAN.md  README.md  app.py  environment.yaml  environment.yml  iww  mkdocs.yml  pyproject.toml  run_dev.sh
.github/workflows/: ci.yml  mypy.yml  tests.yaml
.streamlit/: config.toml
Learning/Jupter_Notebook_Outlines/: AI_Tools.ipynb
backend/: api.py  auth.py  seed.py  test_sanity.py
backend/esm_data/: config.py  database.py  db_models.py  document.py  generator.py  judge.py  metrics.py  models.py  providers.py  services.py  templates.yaml
backend/tests/: test_api.py  test_architecture.py  test_judge.py  test_metrics.py  test_models.py
cli/: README.md  TemporaryREADME.md  pyproject.toml
cli/conda.recipe/: meta.yaml
cli/src/esm_tracker/: __init__.py  cli.py  publisher.py  scanner.py  spider.py
cli/tests/: conftest.py  test_cli.py  test_coverage_edge_cases.py  test_publisher.py  test_scanner.py
data/: esm_form_automation.db
data/tasks/: db
docs/: index.md  local-execution.md  privacy.md  time-machine.md  workflows.md
frontend/: api.py  app.py  client.py  config.py  protocols.py  services.py  ui_constants.py
frontend/assets/: styles.css
frontend/components/: batch_queue.py  extraction_hub.py  pipeline_insights.py  results.py  sidebar.py  stability_ribbon.py  template_architect.py
frontend/tests/: test_api.py  test_app_integration.py  test_downloads.py  test_results_component.py  test_services.py
frontend/utils/: __init__.py  document.py
frontend/views/: __init__.py  generator.py  judge.py  overview.py  review.py  settings.py  tracker.py
notebooks/: ai_tools.ipynb
shared/: models.py
src/: ai_agent.py  config.py  document_reader.py  exceptions.py  export_ingestor.py  generator.py  judge.py  metrics_calculator.py  models.py  schemas.py
