[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spear-esm-data-automation"
version = "0.1.0"
description = "Automated ESM data documentation lifecycle using LLMs"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "pydantic",
    "pyyaml",
    "fastapi",
    "uvicorn",
    "python-multipart",
    "streamlit>=1.35.0",
    "google-genai",
    "openai",
    "markitdown[all]",
    "sqlmodel",
    "aiosqlite",
    "asyncpg",
    "python-dotenv",
    "click>=8.2",
    "fremor",
    "python-docx",
    "httpx2"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "frontend*", "shared*"]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
    "mkdocs",
    "mkdocs-material",
    "pytest-cov"
]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true

ignore_missing_imports = true

warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "-ra -q --cov=cli/src/esm_tracker --cov-report=term-missing --cov-fail-under=90"
testpaths = [
    "backend",
    "frontend",
    "cli/tests"
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",
    "W",    
    "F",    
    "UP",   
    "I",    
    "B",    
    "SIM",  
    "RET",  
    "TID",  
    "RUF",  
    
    "N",
    "C90",
    "ERA",
    "ARG",
    "PLC",
    "PLW",
]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = [
    "fastapi.Depends",
    "fastapi.params.Depends",
    "fastapi.Query",
    "fastapi.params.Query",
    "fastapi.Form",
    "fastapi.params.Form",
    "fastapi.File",
    "fastapi.params.File",
]


[tool.ruff.lint.mccabe]
max-complexity = 5


[tool.ruff.format]
quote-style = "double"

indent-style = "space"

skip-magic-trailing-comma = false

line-ending = "auto"