[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "esm-tracker"
version = "2.0.0"
description = "A lightweight CLI tool for extracting metadata from NetCDF and Zarr files."
authors = [{name = "Matthew Mendoza", email = "matthew.mendoza@noaa.gov"}]
dependencies = [
    "xarray>=2023.0.0",
    "netCDF4>=1.6.0",
    "zarr>=2.14.0",
    "pyyaml>=6.0.0",
    "requests>=2.28.0",
    "watchdog>=3.0.0",
]
requires-python = ">=3.10"

[project.scripts]
esm-tracker = "esm_tracker.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
